<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PruebaMatch">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/T7"
            android:textAlignment="center"
            android:textSize="16sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="12sp" />

        <Button
            android:id="@+id/button9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Mat"
            android:text="@string/Matematicas"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/button25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Lectura"
            android:text="@string/Lectura"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/button26"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="SC"
            android:text="@string/SC"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/button27"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="CN"
            android:text="@string/CN"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/button28"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Ingles"
            android:text="@string/ingles"
            android:textAllCaps="false" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>