<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registrarse">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center">



        <EditText
            android:id="@+id/TMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Correo"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/TPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Contraseña"
            android:inputType="textPassword" />


        <EditText
            android:id="@+id/TNickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Nickname"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/BCrear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:onClick="Crear"
            android:text="@string/Crear"
            android:textAllCaps="false" />


        <com.google.android.gms.common.SignInButton
            android:id="@+id/SignIn"
            android:layout_width="match_parent"
            android:layout_height="48dp"



            android:background="@color/purple_500"
            app:buttonSize="wide" />


        <androidx.constraintlayout.widget.Barrier
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:barrierDirection="top" />

        <TextView
            android:id="@+id/TRemenmberPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="RPass"

            android:text="@string/Remenberpass"
            android:textAlignment="center"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>