<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CRUDPrueba">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center">

        <Button
            android:id="@+id/BCrear2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Crear"
            android:text="@string/Crear2"
            android:textAllCaps="false" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="12sp"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/BActualizar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Actualizar"
            android:text="@string/Actualizar"
            android:textAllCaps="false" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="12sp"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/BEliminar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Eliminar"
            android:text="@string/Eliminar"
            android:textAllCaps="false" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="12sp" />

        <Button
            android:id="@+id/BVer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Ver"
            android:text="@string/Ver"
            android:textAllCaps="false" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>