<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Nickname">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/TAntiguoNick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Old"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="12sp" />

        <EditText
            android:id="@+id/TNewnickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/New"
            android:inputType="textPersonName" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="12sp" />

        <Button
            android:id="@+id/modificarN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Ingresar"
            android:text="@string/Modificar"
            android:textAllCaps="false" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>